@@ -1,5 +1,5 @@
 #source: empty-aligned.s
-#ld: -T empty-aligned.t -z stack-size=0
+#ld: -T empty-aligned.t
 #readelf: -l --wide
 #xfail: "hppa64-*-*"
 #notarget: frv-*-*linux*
@@ -8,7 +8,7 @@
 Program Headers:
  +Type +Offset +VirtAddr +PhysAddr +FileSiz +MemSiz +Flg +Align
  +LOAD +0x[0-9a-f]+ 0x[0-9a-f]+ 0x[0-9a-f]+ 0x[0-9a-f]+ 0x[0-9a-f]+ [RWE ]+ +0x[0-9a-f]+
-
- Section to Segment mapping:
+! +LOAD .*
+#...
  +Segment Sections\.\.\.
  +00 +.text 
